# clerk

./: .envrc  .ghcid  .gitignore  .gitmodules  .markdownlint.jsonc  .~lock.example-1.xlsx#  README.md  cabal.project  clerk.cabal  flake.nix  fourmolu.yaml  package.yaml  pyproject.toml  refs1.bib  shell.nix  stack.yaml
.github/workflows/: ci.yaml
Examples/: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Example5.hs
MS_review_template/: DS_review.docx  Rob_review.docx  SE_review.docx  SNE_review.docx
README/: Conclusion.md  Intro.md  Outro.md
annotation/: thesis.tex
annotation/chapters/: chapter1.tex  chapter3.tex  chapter5.tex
annotation/title/: DS_annotation.docx  SE_annotation.docx  SNE_annotation.docx
annotation_template/: README.md  thesis.tex
annotation_template/chapters/: abstract.tex  chapter1.tex  chapter2.tex  (+1 more)
app/: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Main.hs
assessment/: SE_assessment.docx
convert/: cabal.project  convert.cabal  package.yaml
example/: .gitignore  Main.hs  README.md  clerk-example.cabal  flake.nix  nix-managed.cabal  package.yaml
nix-dev/: .gitignore  README.md  clerk.cabal  flake.nix  package.yaml  workflow.nix
nix-files/: workflow.nix
src/: Clerk.hs  Example.lhs  Example.lhs.md  ForExamples.hs
teaching-regulations/: readme.md
test/: Docs.hs
thesis/: README.md  ref.bib  thesis.tex
thesis-template/: README.md
thesis_assessment_template/: Bach_assessment.docx  DS_assessment.docx  Rob_assessment.docx  SE_assessment.docx  SNE_assessment.docx
thesis_template/: README.md  ref.bib  thesis.tex
(+88 files in other folders)
